Added functionalities.
