# internal/infrastructure/postgres/repository.go
@@ -26,8 +26,8 @@ func (s *PostgresqlStore) CreateAccount(acc *Account) error {
 }
 
 func (s *PostgresqlStore) CreateUser(user *User) error {
-	query := `INSERT INTO "User" (FirstName, LastName, MemberSince, EncryptedPassword)
-              VALUES ($1, $2, $3, $4)
+	query := `INSERT INTO "User" (FirstName, LastName, MemberSince, EncryptedPassword, Role)
+              VALUES ($1, $2, $3, $4, $5)
               RETURNING ID`
 
 	// Execute the query and scan the result into user.ID
@@ -37,6 +37,7 @@ func (s *PostgresqlStore) CreateUser(user *User) error {
 		user.LastName,
 		user.MemberSince,
 		user.EncryptedPassword,
+		user.Role,
 	).Scan(&user.ID)
 
 	if err != nil {
@@ -47,7 +48,7 @@ func (s *PostgresqlStore) CreateUser(user *User) error {
 }
 
 func (s *PostgresqlStore) GetUserByID(userID int) (*User, error) {
-	query := `SELECT ID, FirstName, LastName, MemberSince, EncryptedPassword FROM "User" WHERE ID = $1`
+	query := `SELECT ID, FirstName, LastName, MemberSince, EncryptedPassword, Role FROM "User" WHERE ID = $1`
 
 	user := &User{}
 
@@ -57,6 +58,7 @@ func (s *PostgresqlStore) GetUserByID(userID int) (*User, error) {
 		&user.LastName,
 		&user.MemberSince,
 		&user.EncryptedPassword,
+		&user.Role,
 	)
 
 	if err != nil {
@@ -70,12 +72,19 @@ func (s *PostgresqlStore) GetUserByID(userID int) (*User, error) {
 	return user, nil
 }
 
-func (s *PostgresqlStore) UpdateAccountBalance(*Account) error {
+func (s *PostgresqlStore) UpdateAccountBalance(acc *Account, newBalance float64) error {
+	query := `UPDATE Account SET balance = $1 WHERE accountnumber = $2`
+
+	_, err := s.db.Exec(query, newBalance, acc.AccountNumber)
+	if err != nil {
+		return err
+	}
+
 	return nil
 }
 
 func (s *PostgresqlStore) DeleteAccount(id int) error {
-	_, err := s.db.Query("delete from account where id = $1", id)
+	_, err := s.db.Query("delete from account where accountnumber = $1", id)
 	return err
 }
 
@@ -116,10 +125,6 @@ func (s *PostgresqlStore) GetAccounts(ownerID int) ([]*Account, error) {
 	return accounts, nil
 }
 
-func (s *PostgresqlStore) GetAccountByID(accountNumber int) (*Account, error) {
-	return nil, nil
-}
-
 func (s *PostgresqlStore) GetAccountByNumber(accountNumber int) (*Account, error) {
 	query := `SELECT * FROM Account WHERE accountNumber = $1`
 
@@ -143,12 +148,44 @@ func (s *PostgresqlStore) GetAccountByNumber(accountNumber int) (*Account, error
 	return account, nil
 }
 
-func (s *PostgresqlStore) DeleteUser(i int) error {
-	//TODO implement me
-	panic("implement me")
+func (s *PostgresqlStore) DeleteUser(userId int) error {
+	_, err := s.db.Query(`DELETE FROM "User" WHERE id = $1`, userId)
+	return err
 }
 
-func (s *PostgresqlStore) GetUserAccount(accounts []*Account, err error) {
-	//TODO implement me
-	panic("implement me")
+func (s *PostgresqlStore) GetAllAccounts() ([]*Account, error) {
+	query := `SELECT * FROM Account`
+
+	rows, err := s.db.Query(query)
+	if err != nil {
+		return nil, err
+	}
+	defer func(rows *sql.Rows) {
+		err := rows.Close()
+		if err != nil {
+
+		}
+	}(rows)
+
+	var accounts []*Account
+
+	for rows.Next() {
+		account := &Account{}
+		err := rows.Scan(
+			&account.AccountNumber,
+			&account.Balance,
+			&account.OwnerID,
+			&account.Created,
+		)
+		if err != nil {
+			return nil, err
+		}
+		accounts = append(accounts, account)
+	}
+
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+
+	return accounts, nil
 }
