# internal/types/types.go
@@ -1,8 +1,16 @@
 package types
 
 import (
+	"github.com/pkg/errors"
 	"golang.org/x/crypto/bcrypt"
 	"time"
+)
+
+type Role string
+
+const (
+	AdminRole Role = "admin"
+	UserRole  Role = "user"
 )
 
 type User struct {
@@ -11,6 +19,7 @@ type User struct {
 	LastName          string    `json:"lastName"`
 	MemberSince       time.Time `json:"memberSince"`
 	EncryptedPassword string    `json:"encryptedPassword"`
+	Role              Role      `json:"role"`
 }
 
 type UserDto struct {
@@ -18,11 +27,12 @@ type UserDto struct {
 	FirstName   string    `json:"name"`
 	LastName    string    `json:"lastName"`
 	MemberSince time.Time `json:"memberSince"`
+	Role        Role      `json:"role"`
 }
 
 type Account struct {
 	AccountNumber int       `json:"accountNumber"`
-	Balance       float32   `json:"balance"`
+	Balance       float64   `json:"balance"`
 	OwnerID       int       `json:"ownerID"`
 	Created       time.Time `json:"created"`
 }
@@ -41,23 +51,28 @@ type CreateUserRequest struct {
 	FirstName string `json:"firstName"`
 	LastName  string `json:"lastName"`
 	Password  string `json:"password"`
+	Role      string `json:"role"`
 }
 
 func (u *User) ValidPassword(pw string) bool {
 	return bcrypt.CompareHashAndPassword([]byte(u.EncryptedPassword), []byte(pw)) == nil
 }
 
-func NewUser(FirstName string, LastName string, Password string) (*User, error) {
+func NewUser(FirstName string, LastName string, Password string, Role string) (*User, error) {
 	encpw, err := bcrypt.GenerateFromPassword([]byte(Password), bcrypt.DefaultCost)
 	if err != nil {
 		return nil, err
 	}
-
+	role, err := StringToRole(Role)
+	if err != nil {
+		return nil, err
+	}
 	return &User{
 		FirstName:         FirstName,
 		LastName:          LastName,
 		EncryptedPassword: string(encpw),
 		MemberSince:       time.Now(),
+		Role:              role,
 	}, nil
 }
 
@@ -66,5 +81,16 @@ func NewAccount(OwnerID int) *Account {
 		Balance: 0,
 		OwnerID: OwnerID,
 		Created: time.Now(),
+	}
+}
+
+func StringToRole(s string) (Role, error) {
+	switch s {
+	case string(AdminRole):
+		return AdminRole, nil
+	case string(UserRole):
+		return UserRole, nil
+	default:
+		return "", errors.New("Invalid role")
 	}
 }
